--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body{
     overflow: hidden;
     background-color: #bfdeee;
+  
 }
 .container{
     width: 100%;
@@ -49,7 +50,8 @@ nav{
     text-transform: capitalize;
 }
 
-.navItems li:hover a, .links a :hover{
+.navItems li:hover a, 
+.links a :hover{
     color: darkgray;
 }
 
@@ -61,19 +63,77 @@ nav{
 
 .wrapper{
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     padding: 0 10%;
     overflow: hidden;
 }
 
-.cols{
-    width: 50%
+.cols {
+    width: 70%;
+    text-align: left;
+
 }
 
-/topline{
+.topline{
     display:block;
-    position: ;
+    position: relative;
+    font-size: 35px;
+    letter-spacing: 5px;
+    color: #3d535f;
+
 }
+
+.topline::after {
+    position: absolute;
+    content:'';
+    height: 4px;
+    width: 45px;
+    bottom: 10px;
+    background-color: #3d535f;
+    
+}
+h1{
+    display: block;
+    font-size: 5em;
+    font-weight: 900;
+    color: #3d535f;
+}
+.multiText{
+    color: rgb(159, 151, 107);
+    text-transform: capitalize;
+}
+
+p{  
+    display: block;
+    width: 90%;
+    font-size: 1.2em;
+    color: #3d535f;
+    text-align: left;
+}
+.btns {
+    width: 100%;
+    position: relative;
+    left: 150px;
+}
+
+button{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: 400;
+    color:white;
+    background-color: #3d535f;
+    padding: 8px 14px;
+    margin: 40px 2px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    box-shadow: 0 15px 10px darkgray;
+}
+button:hover {
+    background-color: darkgray;
+}
+
