--- a/style.css
+++ b/style.css
@@ -63,11 +63,12 @@ nav{
 
 .wrapper{
     display: flex;
-    width: 70%;
+    width: 60%;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    padding: 0 10%;
+    padding: 0%;
+    margin: 0;
     overflow: hidden;
 }
 
@@ -137,3 +138,15 @@ button:hover {
     background-color: darkgray;
 }
 
+.imgbox{
+    position: relative; 
+    width: 100%;
+    height: 100%;
+}
+.imgbox img{
+    position: relative; left: 300px;
+    height: 100%;
+    width: 300px;
+    float: right;
+    
+}
